[gd_scene load_steps=2 format=2]

[ext_resource path="res://Logged.gd" type="Script" id=1]

[node name="Logged" type="Node2D"]
script = ExtResource( 1 )

[node name="lbl_PlayerName" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_Credits" type="Label" parent="."]
margin_left = 150.0
margin_right = 190.0
margin_bottom = 14.0
text = "# Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetActiveGames" type="HTTPRequest" parent="."]

[node name="ActiveGames" type="ItemList" parent="."]
margin_left = 50.0
margin_top = 60.0
margin_right = 850.0
margin_bottom = 260.0
auto_height = true
max_columns = 4
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="GetActiveGames" to="." method="_on_GetActiveGames_request_completed"]
